--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.2.0
 opencv-python-headless==4.6.0.66
-dlib==19.23.0
-face_recognition==1.3.0
+deepface==0.0.68
 numpy==1.21.2
 Pillow==8.3.2
